--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "apollo-server-express": "^2.15.0"
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-server-express": "^3.10.0",
+    "bcrypt": "^4.0.1",
+    "express": "^4.17.1",
+    "faker": "^4.1.0",
+    "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.9"
   }
 }
